[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/game assets/sprites/environments/tiles.tres" type="TileSet" id=1]
[ext_resource path="res://assets/game assets/sprites/environments/ref_pacman.png" type="Texture" id=2]
[ext_resource path="res://assets/game assets/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/game assets/OrangeGhost.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/TileMap.gd" type="Script" id=5]
[ext_resource path="res://scripts/BlueGhost.gd" type="Script" id=6]
[ext_resource path="res://scripts/OrangeGhost.gd" type="Script" id=7]
[ext_resource path="res://music/pac_chomp1.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/game assets/BlueGhost.tscn" type="PackedScene" id=9]
[ext_resource path="res://music/09 Hurry! Water World.wav" type="AudioStream" id=10]
[ext_resource path="res://music/pacman_intermission.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/game assets/misc/Extrude.tres" type="DynamicFont" id=12]
[ext_resource path="res://scripts/Score.gd" type="Script" id=13]
[ext_resource path="res://assets/game assets/PinkGhost.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/game assets/RedGhost.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/RedGhost.gd" type="Script" id=16]
[ext_resource path="res://scripts/PinkGhost.gd" type="Script" id=17]

[node name="Sample Level 1" type="Node2D"]

[node name="LevelNavigation" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="TileMap" type="TileMap" parent="LevelNavigation"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 262144, 0, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 0, 0, 262158, 0, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 262169, 5, 0, 262170, 5, 0, 262171, 0, 0, 327680, 0, 0, 327681, 5, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 5, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 5, 0, 327693, 0, 0, 327694, 0, 0, 327695, 5, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 5, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 5, 0, 327707, 0, 0, 393216, 0, 0, 393217, 6, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 5, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 5, 0, 393229, 0, 0, 393230, 0, 0, 393231, 5, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 5, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 6, 0, 393243, 0, 0, 458752, 0, 0, 458753, 5, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 5, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 5, 0, 458765, 0, 0, 458766, 0, 0, 458767, 5, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 5, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 5, 0, 458779, 0, 0, 524288, 0, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524315, 0, 0, 589824, 0, 0, 589825, 5, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 5, 0, 589831, 0, 0, 589832, 0, 0, 589833, 5, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 5, 0, 589843, 0, 0, 589844, 0, 0, 589845, 5, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 5, 0, 589851, 0, 0, 655360, 0, 0, 655361, 5, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 5, 0, 655367, 0, 0, 655368, 0, 0, 655369, 5, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 5, 0, 655379, 0, 0, 655380, 0, 0, 655381, 5, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 5, 0, 655387, 0, 0, 720896, 0, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 0, 0, 720904, 0, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 0, 0, 720910, 0, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 0, 0, 720916, 0, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 5, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 15, 0, 786445, 0, 0, 786446, 0, 0, 786447, 15, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 5, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 851973, 0, 0, 851974, 5, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 15, 0, 851981, 0, 0, 851982, 0, 0, 851983, 15, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 5, 0, 851990, 0, 0, 917509, 0, 0, 917510, 5, 0, 917511, 0, 0, 917512, 0, 0, 917513, 15, 0, 917514, 15, 0, 917515, 15, 0, 917516, 15, 0, 917517, 15, 0, 917518, 15, 0, 917519, 15, 0, 917520, 15, 0, 917521, 15, 0, 917522, 15, 0, 917523, 0, 0, 917524, 0, 0, 917525, 5, 0, 917526, 0, 0, 983045, 0, 0, 983046, 5, 0, 983047, 0, 0, 983048, 0, 0, 983049, 15, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 15, 0, 983054, 11, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 15, 0, 983059, 0, 0, 983060, 0, 0, 983061, 5, 0, 983062, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 5, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 15, 0, 1048586, 0, 0, 1048587, 15, 0, 1048588, 15, 0, 1048589, 15, 0, 1048590, 15, 0, 1048591, 15, 0, 1048592, 15, 0, 1048593, 0, 0, 1048594, 15, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 5, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1114112, 15, 0, 1114113, 15, 0, 1114114, 15, 0, 1114115, 15, 0, 1114116, 15, 0, 1114117, 15, 0, 1114118, 5, 0, 1114119, 15, 0, 1114120, 15, 0, 1114121, 15, 0, 1114122, 0, 0, 1114123, 15, 0, 1114124, 15, 0, 1114125, 15, 0, 1114126, 15, 0, 1114127, 15, 0, 1114128, 15, 0, 1114129, 0, 0, 1114130, 15, 0, 1114131, 15, 0, 1114132, 15, 0, 1114133, 5, 0, 1114134, 15, 0, 1114135, 15, 0, 1114136, 15, 0, 1114137, 15, 0, 1114138, 15, 0, 1114139, 15, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 5, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 15, 0, 1179658, 0, 0, 1179659, 15, 0, 1179660, 15, 0, 1179661, 15, 0, 1179662, 15, 0, 1179663, 15, 0, 1179664, 15, 0, 1179665, 0, 0, 1179666, 15, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 5, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1245189, 0, 0, 1245190, 5, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 15, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 15, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 5, 0, 1245206, 0, 0, 1310725, 0, 0, 1310726, 5, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 15, 0, 1310730, 15, 0, 1310731, 15, 0, 1310732, 15, 0, 1310733, 15, 0, 1310734, 15, 0, 1310735, 15, 0, 1310736, 15, 0, 1310737, 15, 0, 1310738, 15, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 5, 0, 1310742, 0, 0, 1376261, 0, 0, 1376262, 5, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 15, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 15, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 5, 0, 1376278, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 5, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 15, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 15, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 5, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1507328, 0, 0, 1507329, 5, 0, 1507330, 5, 0, 1507331, 5, 0, 1507332, 5, 0, 1507333, 5, 0, 1507334, 5, 0, 1507335, 5, 0, 1507336, 5, 0, 1507337, 5, 0, 1507338, 5, 0, 1507339, 5, 0, 1507340, 5, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 5, 0, 1507344, 5, 0, 1507345, 5, 0, 1507346, 5, 0, 1507347, 5, 0, 1507348, 5, 0, 1507349, 5, 0, 1507350, 5, 0, 1507351, 5, 0, 1507352, 5, 0, 1507353, 5, 0, 1507354, 5, 0, 1507355, 0, 0, 1572864, 0, 0, 1572865, 5, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 5, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 5, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 5, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 5, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 5, 0, 1572891, 0, 0, 1638400, 0, 0, 1638401, 5, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 5, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 5, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 5, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638421, 5, 0, 1638422, 0, 0, 1638423, 0, 0, 1638424, 0, 0, 1638425, 0, 0, 1638426, 5, 0, 1638427, 0, 0, 1703936, 0, 0, 1703937, 6, 0, 1703938, 5, 0, 1703939, 5, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 5, 0, 1703943, 5, 0, 1703944, 5, 0, 1703945, 5, 0, 1703946, 5, 0, 1703947, 5, 0, 1703948, 5, 0, 1703949, 15, 0, 1703950, 15, 0, 1703951, 5, 0, 1703952, 5, 0, 1703953, 5, 0, 1703954, 5, 0, 1703955, 5, 0, 1703956, 5, 0, 1703957, 5, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 5, 0, 1703961, 5, 0, 1703962, 6, 0, 1703963, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769474, 0, 0, 1769475, 5, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 5, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 5, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769487, 0, 0, 1769488, 0, 0, 1769489, 0, 0, 1769490, 5, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 5, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 5, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835010, 0, 0, 1835011, 5, 0, 1835012, 0, 0, 1835013, 0, 0, 1835014, 5, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 5, 0, 1835018, 0, 0, 1835019, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835022, 0, 0, 1835023, 0, 0, 1835024, 0, 0, 1835025, 0, 0, 1835026, 5, 0, 1835027, 0, 0, 1835028, 0, 0, 1835029, 5, 0, 1835030, 0, 0, 1835031, 0, 0, 1835032, 5, 0, 1835033, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1900544, 0, 0, 1900545, 5, 0, 1900546, 5, 0, 1900547, 5, 0, 1900548, 5, 0, 1900549, 5, 0, 1900550, 5, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 5, 0, 1900554, 5, 0, 1900555, 5, 0, 1900556, 5, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 5, 0, 1900560, 5, 0, 1900561, 5, 0, 1900562, 5, 0, 1900563, 0, 0, 1900564, 0, 0, 1900565, 5, 0, 1900566, 5, 0, 1900567, 5, 0, 1900568, 5, 0, 1900569, 5, 0, 1900570, 5, 0, 1900571, 0, 0, 1966080, 0, 0, 1966081, 5, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 5, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 5, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 5, 0, 1966107, 0, 0, 2031616, 0, 0, 2031617, 5, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 5, 0, 2031629, 0, 0, 2031630, 0, 0, 2031631, 5, 0, 2031632, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031635, 0, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 5, 0, 2031643, 0, 0, 2097152, 0, 0, 2097153, 5, 0, 2097154, 5, 0, 2097155, 5, 0, 2097156, 5, 0, 2097157, 5, 0, 2097158, 5, 0, 2097159, 5, 0, 2097160, 5, 0, 2097161, 5, 0, 2097162, 5, 0, 2097163, 5, 0, 2097164, 5, 0, 2097165, 5, 0, 2097166, 5, 0, 2097167, 5, 0, 2097168, 5, 0, 2097169, 5, 0, 2097170, 5, 0, 2097171, 5, 0, 2097172, 5, 0, 2097173, 5, 0, 2097174, 5, 0, 2097175, 5, 0, 2097176, 5, 0, 2097177, 5, 0, 2097178, 5, 0, 2097179, 0, 0, 2162688, 0, 0, 2162689, 0, 0, 2162690, 0, 0, 2162691, 0, 0, 2162692, 0, 0, 2162693, 0, 0, 2162694, 0, 0, 2162695, 0, 0, 2162696, 0, 0, 2162697, 0, 0, 2162698, 0, 0, 2162699, 0, 0, 2162700, 0, 0, 2162701, 0, 0, 2162702, 0, 0, 2162703, 0, 0, 2162704, 0, 0, 2162705, 0, 0, 2162706, 0, 0, 2162707, 0, 0, 2162708, 0, 0, 2162709, 0, 0, 2162710, 0, 0, 2162711, 0, 0, 2162712, 0, 0, 2162713, 0, 0, 2162714, 0, 0, 2162715, 0, 0 )
script = ExtResource( 5 )

[node name="ref_pacman" type="Sprite" parent="LevelNavigation/TileMap"]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
texture = ExtResource( 2 )
centered = false

[node name="chomp" type="AudioStreamPlayer" parent="LevelNavigation/TileMap"]
stream = ExtResource( 8 )
volume_db = -30.0

[node name="win" type="AudioStreamPlayer" parent="LevelNavigation/TileMap"]
stream = ExtResource( 11 )
volume_db = -30.0

[node name="Player" parent="LevelNavigation" groups=[
"Player",
] instance=ExtResource( 3 )]
position = Vector2( 224, 328 )

[node name="BlueGhost" parent="LevelNavigation" instance=ExtResource( 9 )]
position = Vector2( 184, 296 )
collision_mask = 0
script = ExtResource( 6 )

[node name="RedGhost" parent="LevelNavigation" instance=ExtResource( 15 )]
position = Vector2( 224.422, 231.108 )
collision_mask = 0
script = ExtResource( 16 )

[node name="PinkGhost" parent="LevelNavigation" instance=ExtResource( 14 )]
position = Vector2( 223.049, 296 )
collision_mask = 0
script = ExtResource( 17 )

[node name="OrangeGhost" parent="LevelNavigation" instance=ExtResource( 4 )]
position = Vector2( 264, 296 )
collision_mask = 0
script = ExtResource( 7 )

[node name="radar" type="AudioStreamPlayer" parent="LevelNavigation"]
stream = ExtResource( 10 )
volume_db = -20.0
autoplay = true

[node name="BlueSpawn" type="Position2D" parent="LevelNavigation"]
position = Vector2( 184, 296 )

[node name="BlueTimer" type="Timer" parent="LevelNavigation/BlueSpawn"]

[node name="RedSpawn" type="Position2D" parent="LevelNavigation"]
position = Vector2( 208, 296 )

[node name="RedTimer" type="Timer" parent="LevelNavigation/RedSpawn"]

[node name="PinkSpawn" type="Position2D" parent="LevelNavigation"]
position = Vector2( 240, 296 )

[node name="PinkTimer" type="Timer" parent="LevelNavigation/PinkSpawn"]

[node name="OrangeSpawn" type="Position2D" parent="LevelNavigation"]
position = Vector2( 264, 296 )

[node name="OrangeTimer" type="Timer" parent="LevelNavigation/OrangeSpawn"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 104.0
margin_top = 8.0
margin_right = 338.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 12 )
text = "Score:0"
align = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="LevelNavigation/BlueSpawn/BlueTimer" to="LevelNavigation/BlueGhost" method="_on_BlueTimer_timeout"]
[connection signal="timeout" from="LevelNavigation/RedSpawn/RedTimer" to="LevelNavigation/RedGhost" method="_on_RedTimer_timeout"]
[connection signal="timeout" from="LevelNavigation/PinkSpawn/PinkTimer" to="LevelNavigation/PinkGhost" method="_on_PinkTimer_timeout"]
[connection signal="timeout" from="LevelNavigation/OrangeSpawn/OrangeTimer" to="LevelNavigation/OrangeGhost" method="_on_OrangeTimer_timeout"]

[connection signal="timeout" from="Timer" to="LevelNavigation/TileMap" method="_on_Timer_timeout"]
